--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     <div class="slides-container" id="slidesContainer">
       <!-- Slide 1 with two videos side by side (loop added) -->
       <div class="slide">
-        <video src="assets/sample1b.mp4" controls muted autoplay loop></video>
+        <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
         <video src="assets/sample1b.mp4" controls muted autoplay loop></video>
       </div>
       <!-- Slide 2 -->
