--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@
         <!-- Left (Real) -->
         <div class="frame">
           <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
-          <div class="caption">Left: Real test frames</div>
+          <div class="caption">Real test frames</div>
         </div>
         <!-- Right (Pika 1.0) -->
         <div class="frame">
           <video src="assets/sample1b.mp4" controls muted autoplay loop></video>
-          <div class="caption">Right: Pika 1.0</div>
+          <div class="caption">Pika 1.0</div>
         </div>
       </div>
 
@@ -405,11 +405,11 @@
       <div class="slide">
         <div class="frame">
           <video src="assets/sample2a.mp4" controls muted autoplay loop></video>
-          <div class="caption">Left: Real test frames</div>
+          <div class="caption">Real test frames</div>
         </div>
         <div class="frame">
           <video src="assets/sample2b.mp4" controls muted autoplay loop></video>
-          <div class="caption">Right: VideoPoet (multiframe)</div>
+          <div class="caption">VideoPoet (multiframe)</div>
         </div>
       </div>
 
@@ -417,11 +417,11 @@
       <div class="slide">
         <div class="frame">
           <video src="assets/sample3a.mp4" controls muted autoplay loop></video>
-          <div class="caption">Left: Real test frames</div>
+          <div class="caption">Real test frames</div>
         </div>
         <div class="frame">
           <video src="assets/sample3b.mp4" controls muted autoplay loop></video>
-          <div class="caption">Right: Runway Gen 3</div>
+          <div class="caption">Runway Gen 3</div>
         </div>
       </div>
     </div>
