--- a/index.html
+++ b/index.html
@@ -423,11 +423,11 @@
       <div class="slide">
         <div class="frame">
           <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
-          <div class="caption">Left: Real test frames</div>
+          <div class="caption">Real test frames</div>
         </div>
         <div class="frame">
           <video src="assets/sample1b.mp4" controls muted autoplay loop></video>
-          <div class="caption">Right: Example Model</div>
+          <div class="caption">Pia 1.0</div>
         </div>
       </div>
       <!-- Add more slides as needed -->
