--- a/index.html
+++ b/index.html
@@ -198,41 +198,50 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 48%;
+      /* Force 1024x576 for each video */
+      width: 1024px;
+      height: 576px;
+      position: relative; /* So caption can go below if desired */
     }
+    /* Force the <video> to fill the 1024x576 container exactly */
     .frame video {
       width: 100%;
+      height: 100%;
       border-radius: 0.5rem;
+      object-fit: cover; /* or contain, if you want letterboxing/pillarboxing */
     }
     .caption {
       font-size: 0.9rem;
       color: #666;
       margin-top: 0.25rem;
       text-align: center;
+      position: absolute;
+      bottom: -1.5rem; /* adjust as needed if you want spacing below */
     }
 
-    /* Arrows */
+    /* Arrows: offset further from the videos */
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
       background: rgba(0, 0, 0, 0.5);
       color: #fff;
-      padding: 0.5rem;
+      padding: 0.75rem;
       cursor: pointer;
       border-radius: 9999px;
       user-select: none;
       font-size: 1.25rem;
       line-height: 1.25rem;
+      z-index: 10; /* ensure arrows appear on top */
     }
     .arrow:hover {
       background: rgba(0, 0, 0, 0.7);
     }
     .arrow-left {
-      left: 10px;
+      left: 30px; /* Moved further from the center */
     }
     .arrow-right {
-      right: 10px;
+      right: 30px; /* Moved further from the center */
     }
 
     /* Footer */
@@ -306,7 +315,6 @@
   </div>
 
   <!-- Leaderboard Section -->
-  <!-- Sorted by Physics-IQ score (descending), excluding the Physical Variance row -->
   <div class="leaderboard">
     <h2>Leaderboard</h2>
     <table class="leaderboard-table">
@@ -427,11 +435,10 @@
         </div>
         <div class="frame">
           <video src="assets/sample1b.mp4" controls muted autoplay loop></video>
-          <div class="caption">Pia 1.0</div>
+          <div class="caption">Pika 1.0</div>
         </div>
       </div>
-      <!-- Add more slides as needed -->
-    <!-- Slide 2 with a different model name -->
+      <!-- Slide 2 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample2a.mp4" controls muted autoplay loop></video>
@@ -442,8 +449,7 @@
           <div class="caption">VideoPoet (multiframe)</div>
         </div>
       </div>
-
-      <!-- Slide 3 with another model name -->
+      <!-- Slide 3 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample3a.mp4" controls muted autoplay loop></video>
@@ -454,7 +460,19 @@
           <div class="caption">Runway Gen 3</div>
         </div>
       </div>
+      <!-- slide 4 -->
+      <div class="slide">
+        <div class="frame">
+          <video src="assets/sample4a.mp4" controls muted autoplay loop></video>
+          <div class="caption">Real test frames</div>
+        </div>
+        <div class="frame">
+          <video src="assets/sample4b.mp4" controls muted autoplay loop></video>
+          <div class="caption">Stable Video Diffusion</div>
+        </div>
+      </div>
     </div>
+
     <!-- Right Arrow -->
     <div class="arrow arrow-right" onclick="nextSlide()">&rsaquo;</div>
   </div>
@@ -490,6 +508,5 @@
       showSlide(currentSlide - 1);
     }
   </script>
-
 </body>
 </html>
