--- a/index.html
+++ b/index.html
@@ -198,50 +198,41 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* Force 1024x576 for each video */
-      width: 1024px;
-      height: 576px;
-      position: relative; /* So caption can go below if desired */
+      width: 48%;
     }
-    /* Force the <video> to fill the 1024x576 container exactly */
     .frame video {
       width: 100%;
-      height: 100%;
       border-radius: 0.5rem;
-      object-fit: cover; /* or contain, if you want letterboxing/pillarboxing */
     }
     .caption {
       font-size: 0.9rem;
       color: #666;
       margin-top: 0.25rem;
       text-align: center;
-      position: absolute;
-      bottom: -1.5rem; /* adjust as needed if you want spacing below */
     }
 
-    /* Arrows: offset further from the videos */
+    /* Arrows */
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
       background: rgba(0, 0, 0, 0.5);
       color: #fff;
-      padding: 0.75rem;
+      padding: 0.5rem;
       cursor: pointer;
       border-radius: 9999px;
       user-select: none;
       font-size: 1.25rem;
       line-height: 1.25rem;
-      z-index: 10; /* ensure arrows appear on top */
     }
     .arrow:hover {
       background: rgba(0, 0, 0, 0.7);
     }
     .arrow-left {
-      left: 30px; /* Moved further from the center */
+      left: 10px;
     }
     .arrow-right {
-      right: 30px; /* Moved further from the center */
+      right: 10px;
     }
 
     /* Footer */
