--- a/index.html
+++ b/index.html
@@ -422,6 +422,18 @@
       <!-- Slide 1 (example) -->
       <div class="slide">
         <div class="frame">
+          <video src="assets/sample5a.mp4" controls muted autoplay loop></video>
+          <div class="caption">Real test frames</div>
+        </div>
+        <div class="frame">
+          <video src="assets/sample5b.mp4" controls muted autoplay loop></video>
+          <div class="caption">Sora</div>
+        </div>
+      </div>
+      
+      <!-- Slide 1 (example) -->
+      <div class="slide">
+        <div class="frame">
           <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
           <div class="caption">Real test frames</div>
         </div>
