--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       border-bottom: none;
     }
 
-    /* Progress bar styling (with numeric label) */
+    /* PROGRESS BAR: thicker + numeric label more to the right */
     .progress {
       width: 100%;
       background-color: #eee;
@@ -153,25 +153,24 @@
       position: relative;
     }
     .progress-bar {
-      height: 1rem;
+      height: 1.5rem; /* 1.5x thicker than before */
       background-color: #5585FF;
       border-radius: 0.25rem 0 0 0.25rem;
       text-align: right;
       color: #fff;
-      font-size: 0.75rem;
-      line-height: 1rem;
+      font-size: 0.8rem; /* slightly bigger font for clarity */
+      line-height: 1.5rem; /* match the new height for vertical centering */
       padding-right: 0.25rem;
       box-sizing: border-box;
       position: relative;
     }
-    /* Numeric label inside the bar */
     .progress-bar span {
       position: absolute;
       top: 0;
-      right: 5px;
+      right: 10px; /* move text further away from the bar edge */
       color: #fff;
-      font-size: 0.75rem;
-      line-height: 1rem;
+      font-size: 0.8rem;
+      line-height: 1.5rem;
     }
 
     /* Video Model Samples (carousel) */
@@ -431,7 +430,6 @@
         </div>
       </div>
       
-      <!-- Slide 1 (example) -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
