--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
     <!-- Slides Container -->
     <div class="slides-container" id="slidesContainer">
-      <!-- Slide  (example) -->
+      <!-- Slide 1 (example) -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample5a.mp4" controls muted autoplay loop></video>
@@ -429,7 +429,7 @@
           <div class="caption">Sora</div>
         </div>
       </div>
-      <!-- Slide  (example) -->
+      <!-- Slide 2 (example) -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample1a.mp4" controls muted autoplay loop></video>
@@ -440,7 +440,7 @@
           <div class="caption">Pika 1.0</div>
         </div>
       </div>
-      <!-- Slide 2 -->
+      <!-- Slide 3 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample2a.mp4" controls muted autoplay loop></video>
@@ -451,7 +451,7 @@
           <div class="caption">VideoPoet (multiframe)</div>
         </div>
       </div>
-      <!-- Slide 3 -->
+      <!-- Slide 4 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample3a.mp4" controls muted autoplay loop></video>
@@ -462,7 +462,7 @@
           <div class="caption">Runway Gen 3</div>
         </div>
       </div>
-      <!-- slide 4 -->
+      <!-- slide 5 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample4a.mp4" controls muted autoplay loop></video>
@@ -473,8 +473,7 @@
           <div class="caption">Stable Video Diffusion</div>
         </div>
       </div>
-      <!-- slide 4 -->
-
+      <!-- slide 6 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample6a.mp4" controls muted autoplay loop></video>
@@ -485,7 +484,7 @@
           <div class="caption">Lumiere (i2v)</div>
         </div>
       </div>
-      <!-- slide 4 -->
+      <!-- slide 7 -->
       <div class="slide">
         <div class="frame">
           <video src="assets/sample7a.mp4" controls muted autoplay loop></video>
@@ -496,7 +495,17 @@
           <div class="caption">VideoPoet (i2v)</div>
         </div>
       </div>
-
+    <!-- slide 8 -->
+      <div class="slide">
+        <div class="frame">
+          <video src="assets/sample8a.mp4" controls muted autoplay loop></video>
+          <div class="caption">Real test frames</div>
+        </div>
+        <div class="frame">
+          <video src="assets/sample8b.mp4" controls muted autoplay loop></video>
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+      </div>
 
 
 
