--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
       Do generative video models learn physical principles from watching videos?
     </h1>
     <div class="authors">
-      Saman Motamed<sup>(1,*)</sup>, Laura Culp<sup>(2)</sup>, Kevin Swersky<sup>(2)</sup>, 
-      Priyank Jaini<sup>(2)</sup>, Robert Geirhos<sup>(2)</sup>
+      Saman Motamed<sup>1,*</sup>, Laura Culp<sup>2</sup>, Kevin Swersky<sup>2</sup>, 
+      Priyank Jaini<sup>2</sup>, Robert Geirhos<sup>2</sup>
     </div>
     <div class="affiliations">
       <strong>1:</strong> INSAIT, Sofia University &nbsp;&nbsp;
