--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       We address this question by developing <strong>Physics-IQ</strong>, a comprehensive benchmark
       dataset that can only be solved by acquiring a deep understanding of various physical principles,
       like fluid dynamics, optics, solid mechanics, magnetism and thermodynamics.
-      We find that across a range of current models (Runway, Pika, Lumiere, Stable Video Diffusion, and VideoPoet),
+      We find that across a range of current models (Sora, Runway, Pika, Lumiere, Stable Video Diffusion, and VideoPoet),
       physical understanding is severely limited. At the same time, some test cases can already be successfully solved.
       For instance, fluid dynamics tend to work better than solid mechanics. This indicates that acquiring certain
       physical principles from observation alone may be possible, but significant challenges remain.
