--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
   <!-- Video Model Samples -->
   <div class="section-wrapper">
-    <h2>Video Model Samples</h2>
+    <h2>Examples 🎥</h2>
   </div>
   <div class="video-samples">
     <!-- Left Arrow -->
