--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
   <!-- Abstract Section -->
   <div class="section-wrapper">
-    <h2>Abstract</h2>
+    <h2>Abstract 📣</h2>
     <p>
       AI video generation is undergoing a revolution, with quality and realism advancing rapidly.
       These advances have led to a passionate scientific debate: Do video models learn “world models”
@@ -304,7 +304,7 @@
 
   <!-- Leaderboard Section -->
   <div class="leaderboard">
-    <h2>Leaderboard</h2>
+    <h2>Leaderboard 🏅</h2>
     <table class="leaderboard-table">
       <thead>
         <tr>
@@ -392,7 +392,7 @@
 
   <!-- Video Model Samples -->
   <div class="section-wrapper">
-    <h2>Examples 🎥</h2>
+    <h2>Examples 🎞️</h2>
   </div>
   <div class="video-samples">
     <!-- Left Arrow -->
